--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Medicio landing page template for Health niche</title>
+  <title>Nandala Prathima</title>
 
   <!-- css -->
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -92,7 +92,7 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="wow fadeInDown" data-wow-offset="0" data-wow-delay="0.1s">
-                <h2 class="h-ultra">Medicio medical group</h2>
+                <h2 class="h-ultra">Prathima medical group</h2>
               </div>
               <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.1s">
                 <h4 class="h-light">Provide best quality healthcare for you</h4>
