--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-
+  <link rel='manifest' href='/manifest.webmanifest'>
   <title>Nandala Prathima</title>
 
   <!-- css -->
@@ -24,7 +24,28 @@
   <link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
   <!-- template skin -->
   <link id="t-colors" href="color/default.css" rel="stylesheet">
+	<script type="text/javascript">
+	// This is the service worker with the Cache-first network
 
+// Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+
+// Check compatibility for the browser we're running this in
+if ("serviceWorker" in navigator) {
+  if (navigator.serviceWorker.controller) {
+    console.log("[PWA Builder] active service worker found, no need to register");
+  } else {
+    // Register the service worker
+    navigator.serviceWorker
+      .register("pwabuilder-sw.js", {
+        scope: "./"
+      })
+      .then(function (reg) {
+        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+      });
+  }
+}
+
+	</script>
   <!-- =======================================================
     Theme Name: Medicio
     Theme URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
